Refactored the Webhook