@@ -1,13 +1,18 @@
 package com.beanbeanjuice.cafebot.utility.webhook;
 
+import lombok.Getter;
+import lombok.Setter;
+
 import javax.net.ssl.HttpsURLConnection;
 import java.awt.*;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.lang.reflect.Array;
+import java.net.URI;
 import java.net.URL;
 import java.util.*;
 import java.util.List;
+import java.util.stream.Stream;
 
 /**
  * A class used for sending {@link Webhook Webhooks}.
@@ -17,45 +22,24 @@ import java.util.List;
 public class Webhook {
 
     private final String url;
-    private String content;
-    private String username;
-    private String avatarUrl;
-    private boolean tts;
-    private List<EmbedObject> embeds = new ArrayList<>();
+    @Setter private String content;
+    @Setter private String username;
+    @Setter private String avatarUrl;
+    @Setter private boolean tts;
+    private final List<EmbedObject> embeds = new ArrayList<>();
 
     /**
      * Constructs a new DiscordWebhook instance
      *
      * @param url The webhook URL obtained in Discord
      */
-    public Webhook(String url) {
+    public Webhook(final String url) {
         this.url = url;
     }
 
-    public void setContent(String content) {
-        this.content = content;
-    }
-
-    public void setUsername(String username) {
-        this.username = username;
-    }
-
-    public void setAvatarUrl(String avatarUrl) {
-        this.avatarUrl = avatarUrl;
-    }
-
-    public void setTts(boolean tts) {
-        this.tts = tts;
-    }
-
-    public void addEmbed(EmbedObject embed) {
-        this.embeds.add(embed);
-    }
-
     public void execute() throws IOException {
-        if (this.content == null && this.embeds.isEmpty()) {
+        if (this.content == null && this.embeds.isEmpty())
             throw new IllegalArgumentException("Set content or add at least one EmbedObject");
-        }
 
         JSONObject json = new JSONObject();
 
@@ -64,81 +48,71 @@ public class Webhook {
         json.put("avatar_url", this.avatarUrl);
         json.put("tts", this.tts);
 
-        if (!this.embeds.isEmpty()) {
-            List<JSONObject> embedObjects = new ArrayList<>();
+        List<JSONObject> embedObjects = new ArrayList<>();
+        this.embeds.forEach((embed) -> {
+            JSONObject jsonEmbed = new JSONObject();
 
-            for (EmbedObject embed : this.embeds) {
-                JSONObject jsonEmbed = new JSONObject();
+            jsonEmbed.put("title", embed.getTitle());
+            jsonEmbed.put("description", embed.getDescription());
+            jsonEmbed.put("url", embed.getUrl());
 
-                jsonEmbed.put("title", embed.getTitle());
-                jsonEmbed.put("description", embed.getDescription());
-                jsonEmbed.put("url", embed.getUrl());
+            embed.getColor().ifPresent((color) -> {
+                int rgb = color.getRed();
+                rgb = (rgb << 8) + color.getGreen();
+                rgb = (rgb << 8) + color.getBlue();
 
-                if (embed.getColor() != null) {
-                    Color color = embed.getColor();
-                    int rgb = color.getRed();
-                    rgb = (rgb << 8) + color.getGreen();
-                    rgb = (rgb << 8) + color.getBlue();
+                jsonEmbed.put("color", rgb);
+            });
 
-                    jsonEmbed.put("color", rgb);
-                }
+            List<EmbedObject.Field> fields = embed.getFields();
 
-                EmbedObject.Footer footer = embed.getFooter();
-                EmbedObject.Image image = embed.getImage();
-                EmbedObject.Thumbnail thumbnail = embed.getThumbnail();
-                EmbedObject.Author author = embed.getAuthor();
-                List<EmbedObject.Field> fields = embed.getFields();
+            embed.getFooter().ifPresent((footer) -> {
+                JSONObject jsonFooter = new JSONObject();
 
-                if (footer != null) {
-                    JSONObject jsonFooter = new JSONObject();
+                jsonFooter.put("text", footer.text());
+                jsonFooter.put("icon_url", footer.iconUrl());
+                jsonEmbed.put("footer", jsonFooter);
+            });
 
-                    jsonFooter.put("text", footer.getText());
-                    jsonFooter.put("icon_url", footer.getIconUrl());
-                    jsonEmbed.put("footer", jsonFooter);
-                }
+            embed.getImage().ifPresent((image) -> {
+                JSONObject jsonImage = new JSONObject();
 
-                if (image != null) {
-                    JSONObject jsonImage = new JSONObject();
+                jsonImage.put("url", image.url());
+                jsonEmbed.put("image", jsonImage);
+            });
 
-                    jsonImage.put("url", image.getUrl());
-                    jsonEmbed.put("image", jsonImage);
-                }
+            embed.getThumbnail().ifPresent((thumbnail) -> {
+                JSONObject jsonThumbnail = new JSONObject();
 
-                if (thumbnail != null) {
-                    JSONObject jsonThumbnail = new JSONObject();
+                jsonThumbnail.put("url", thumbnail.url());
+                jsonEmbed.put("thumbnail", jsonThumbnail);
+            });
 
-                    jsonThumbnail.put("url", thumbnail.getUrl());
-                    jsonEmbed.put("thumbnail", jsonThumbnail);
-                }
+            embed.getAuthor().ifPresent((author) -> {
+                JSONObject jsonAuthor = new JSONObject();
 
-                if (author != null) {
-                    JSONObject jsonAuthor = new JSONObject();
+                jsonAuthor.put("name", author.name());
+                jsonAuthor.put("url", author.url());
+                jsonAuthor.put("icon_url", author.iconUrl());
+                jsonEmbed.put("author", jsonAuthor);
+            });
 
-                    jsonAuthor.put("name", author.getName());
-                    jsonAuthor.put("url", author.getUrl());
-                    jsonAuthor.put("icon_url", author.getIconUrl());
-                    jsonEmbed.put("author", jsonAuthor);
-                }
+            Stream<JSONObject> jsonFields = fields.stream().map((field) -> {
+                JSONObject jsonField = new JSONObject();
 
-                List<JSONObject> jsonFields = new ArrayList<>();
-                for (EmbedObject.Field field : fields) {
-                    JSONObject jsonField = new JSONObject();
+                jsonField.put("name", field.name());
+                jsonField.put("value", field.value());
+                jsonField.put("inline", field.inline());
 
-                    jsonField.put("name", field.getName());
-                    jsonField.put("value", field.getValue());
-                    jsonField.put("inline", field.isInline());
+                return jsonField;
+            });
 
-                    jsonFields.add(jsonField);
-                }
+            jsonEmbed.put("fields", jsonFields.toArray());
+            embedObjects.add(jsonEmbed);
+        });
+        if (!embedObjects.isEmpty()) json.put("embeds", embedObjects.toArray());
 
-                jsonEmbed.put("fields", jsonFields.toArray());
-                embedObjects.add(jsonEmbed);
-            }
-
-            json.put("embeds", embedObjects.toArray());
-        }
-
-        URL url = new URL(this.url);
+        URL url = URI.create(this.url).toURL();
         HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
         connection.addRequestProperty("Content-Type", "application/json");
         connection.addRequestProperty("User-Agent", "Java-DiscordWebhook-BY-Gelox_");
@@ -150,202 +124,56 @@ public class Webhook {
         stream.flush();
         stream.close();
 
-        connection.getInputStream().close(); //I'm not sure why but it doesn't work without getting the InputStream
+        connection.getInputStream().close();
         connection.disconnect();
     }
 
-    public static class EmbedObject {
-        private String title;
-        private String description;
-        private String url;
-        private Color color;
+    @Setter
+    private static class EmbedObject {
+        @Getter private String title;
+        @Getter private String description;
+        @Getter private String url;
+        @Getter private List<Field> fields = new ArrayList<>();
 
+        private Color color;
         private Footer footer;
         private Thumbnail thumbnail;
         private Image image;
         private Author author;
-        private List<Field> fields = new ArrayList<>();
 
-        public String getTitle() {
-            return title;
+        public Optional<Color> getColor() {
+            return Optional.ofNullable(this.color);
         }
 
-        public String getDescription() {
-            return description;
+        public Optional<Footer> getFooter() {
+            return Optional.ofNullable(this.footer);
         }
 
-        public String getUrl() {
-            return url;
+        public Optional<Thumbnail> getThumbnail() {
+            return Optional.ofNullable(this.thumbnail);
         }
 
-        public Color getColor() {
-            return color;
+        public Optional<Image> getImage() {
+            return Optional.ofNullable(this.image);
         }
 
-        public Footer getFooter() {
-            return footer;
+        public Optional<Author> getAuthor() {
+            return Optional.ofNullable(this.author);
         }
 
-        public Thumbnail getThumbnail() {
-            return thumbnail;
-        }
-
-        public Image getImage() {
-            return image;
-        }
-
-        public Author getAuthor() {
-            return author;
-        }
-
-        public List<Field> getFields() {
-            return fields;
-        }
-
-        public EmbedObject setTitle(String title) {
-            this.title = title;
-            return this;
-        }
-
-        public EmbedObject setDescription(String description) {
-            this.description = description;
-            return this;
-        }
-
-        public EmbedObject setUrl(String url) {
-            this.url = url;
-            return this;
-        }
-
-        public EmbedObject setColor(Color color) {
-            this.color = color;
-            return this;
-        }
-
-        public EmbedObject setFooter(String text, String icon) {
-            this.footer = new Footer(text, icon);
-            return this;
-        }
-
-        public EmbedObject setThumbnail(String url) {
-            this.thumbnail = new Thumbnail(url);
-            return this;
-        }
-
-        public EmbedObject setImage(String url) {
-            this.image = new Image(url);
-            return this;
-        }
-
-        public EmbedObject setAuthor(String name, String url, String icon) {
-            this.author = new Author(name, url, icon);
-            return this;
-        }
-
-        public EmbedObject addField(String name, String value, boolean inline) {
-            this.fields.add(new Field(name, value, inline));
-            return this;
-        }
-
-        private class Footer {
-            private String text;
-            private String iconUrl;
-
-            private Footer(String text, String iconUrl) {
-                this.text = text;
-                this.iconUrl = iconUrl;
-            }
-
-            private String getText() {
-                return text;
-            }
-
-            private String getIconUrl() {
-                return iconUrl;
-            }
-        }
-
-        private class Thumbnail {
-            private String url;
-
-            private Thumbnail(String url) {
-                this.url = url;
-            }
-
-            private String getUrl() {
-                return url;
-            }
-        }
-
-        private class Image {
-            private String url;
-
-            private Image(String url) {
-                this.url = url;
-            }
-
-            private String getUrl() {
-                return url;
-            }
-        }
-
-        private class Author {
-            private String name;
-            private String url;
-            private String iconUrl;
-
-            private Author(String name, String url, String iconUrl) {
-                this.name = name;
-                this.url = url;
-                this.iconUrl = iconUrl;
-            }
-
-            private String getName() {
-                return name;
-            }
-
-            private String getUrl() {
-                return url;
-            }
-
-            private String getIconUrl() {
-                return iconUrl;
-            }
-        }
-
-        private class Field {
-            private String name;
-            private String value;
-            private boolean inline;
-
-            private Field(String name, String value, boolean inline) {
-                this.name = name;
-                this.value = value;
-                this.inline = inline;
-            }
-
-            private String getName() {
-                return name;
-            }
-
-            private String getValue() {
-                return value;
-            }
-
-            private boolean isInline() {
-                return inline;
-            }
-        }
+        private record Footer(String text, String iconUrl) { }
+        private record Thumbnail(String url) { }
+        private record Image(String url) { }
+        private record Author(String name, String url, String iconUrl) { }
+        private record Field(String name, String value, boolean inline) { }
     }
 
-    private class JSONObject {
+    private static class JSONObject {
 
         private final HashMap<String, Object> map = new HashMap<>();
 
         void put(String key, Object value) {
-            if (value != null) {
-                map.put(key, value);
-            }
+            if (value != null) map.put(key, value);
         }
 
         @Override
@@ -366,7 +194,7 @@ public class Webhook {
                 } else if (val instanceof Boolean) {
                     builder.append(val);
                 } else if (val instanceof JSONObject) {
-                    builder.append(val.toString());
+                    builder.append(val);
                 } else if (val.getClass().isArray()) {
                     builder.append("[");
                     int len = Array.getLength(val);
